Переделал main(), часть функционала вынес в отдельные функции, добавил докстринги, временно исключил из .gitignore папку с исполняемым файлом.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,10 @@
 /Билеты/
 *.pdf
 
-/executable/
+/.idea/.gitignore
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/tickitter.iml
+/.idea/vcs.xml
